refactor: toList를 사용하도록 개선